WORK - tokenization du fichier config

--- a/tests/exemple.conf
+++ b/tests/exemple.conf
@@ -1,43 +1,43 @@
 server {
-    server_name example
-    listen 0.0.0.0:8080
+    server_name example1;
+    listen 0.0.0.0:8080;
 
-    root ./ExampleRoot
-    index index.html
+    root ./ExampleRoot;
+    index index.html;
 
-    allow_methods GET
+    allow_methods GET;
 
     location /upload {
-        allow_methods PUT
-        root ./ExampleRoot/upload_here
-        alias
+        allow_methods PUT;
+        root ./ExampleRoot/upload_here;
+        alias ./ExampleRoot/upload_here;
     }
 
     location /submit_data {
-        allow_methods POST
-        client_body_buffer_size 200
+        allow_methods POST;
+        client_body_buffer_size 200;
     }
 
     location /files {
-        alias
-        allow_methods GET
-        root ExampleRoot/
-        index example.bad_extension
+        alias ./ExampleRoot/;
+        allow_methods GET;
+        root ./ExampleRoot/;
+        index example.bad_extension;
 
-        location *.test {
-            allow_methods GET POST
-            cgi_pass test_script/cgi_handler
+        location ~ \.test$ {
+            allow_methods GET POST;
+            cgi_pass test_script/cgi_handler;
         }
     }
 
-    location *.test {
-        allow_methods POST
-        cgi_pass test_script/cgi_handler
+    location ~ \.test$ {
+        allow_methods POST;
+        cgi_pass test_script/cgi_handler;
     }
 }
 
 server {
-    server_name example
+    server_name example2
     listen 0.0.0.0:8081
 
     root ./ExampleRoot
@@ -75,7 +75,7 @@ server {
 }
 
 server {
-    server_name example
+    server_name example3
     listen 0.0.0.0:8082
 
     root ./ExampleRoot
