--- a/tests/subject.conf
+++ b/tests/subject.conf
@@ -40,7 +40,7 @@ server {
 
     root website/;
     index index.html;
-    allow_methods GET;
+    allow_methods GET POST;
     client_max_body_size 1048576;
 
     error_page 404 resources/not_found.html;
