Work Parsing, check error config file

--- a/tests/subject.conf
+++ b/tests/subject.conf
@@ -1,6 +1,7 @@
+ewafwfww
 server {
     server_name localhost;
-    listen 0.0.0.0:8080;
+    listen 0.0...00:8080;
 
     root website/;
     index index.html;
@@ -13,7 +14,6 @@ server {
     location /upload {
         allow_methods POST;
         upload_dir website/media;
-        client_max_body_size 21;
     }
 
     location /files {
@@ -36,7 +36,7 @@ server {
 
 server {
     server_name webserv;
-    listen 127.0.0.1:666;
+    listen 127.0.0.1:666; #gfdbdbrtb
 
     root website/;
     index index.html;
