input in confFile from octets to Mo

--- a/tests/subject.conf
+++ b/tests/subject.conf
@@ -5,7 +5,7 @@ server {
     root website/;
     index index.html;
     allow_methods GET;
-    client_max_body_size 1048576;
+    client_max_body_size 10;
 
     error_page 404 resources/not_found.html;
     error_page 500 resources/internal_server_error.html;
@@ -13,7 +13,7 @@ server {
     location /upload {
         allow_methods POST;
         upload_dir website/media/;
-        client_max_body_size 5242880;
+        client_max_body_size 5;
     }
 
     location /files {
@@ -48,7 +48,7 @@ server {
     location /upload {
         allow_methods POST;
         upload_dir website/media/;
-        client_max_body_size 5242880;
+        client_max_body_size 5;
     }
 
     location /files {
