final branch on main

--- a/tests/subject.conf
+++ b/tests/subject.conf
@@ -28,7 +28,7 @@ server {
 
     location /cgi {
         allow_methods GET POST;
-        cgi .php .py;
+        cgi .pl .py;
         cgi_path website/api/;
         auto_index off;
     }
