--- a/tests/subject.conf
+++ b/tests/subject.conf
@@ -7,7 +7,7 @@ server {
     allow_methods GET;
     client_max_body_size 10;
 
-    error_page 404 resources/end.html;
+    error_page 404 resources/not_found.html;
     error_page 500 resources/internal_server_error.html;
 
     location /upload {
