--- a/tests/subject.conf
+++ b/tests/subject.conf
@@ -38,7 +38,7 @@ server {
     server_name webserv;
     listen 127.0.0.1:1025;
 
-    root website/media/;
+    root website/;
     allow_methods GET;
     auto_index on;
 
