--- a/tests/subject.conf
+++ b/tests/subject.conf
@@ -35,12 +35,13 @@ server {
 }
 
 server {
-    server_name webserv;
+    server_name localhost;
     listen 127.0.0.1:1025;
 
     root website/;
+    index index.html;
     allow_methods GET;
-    auto_index on;
+    client_max_body_size 10;
 
     error_page 404 resources/not_found.html;
     error_page 500 resources/internal_server_error.html;
@@ -53,5 +54,18 @@ server {
 
     location /files {
         allow_methods GET DELETE;
+        root website/media/;
+        auto_index on;
+    }
+
+    location /private {
+        return 301 /;
+    }
+
+    location /cgi {
+        allow_methods GET POST;
+        cgi .pl .py;
+        cgi_path website/api/;
+        auto_index off;
     }
 }
