--- a/tests/subject.conf
+++ b/tests/subject.conf
@@ -34,4 +34,40 @@ server {
     }
 }
 
+server {
+    server_name webserv;
+    listen 0.0.0.0:8080;
+
+    root website/;
+    index index.html;
+    allow_methods GET;
+    client_max_body_size 10;
+
+    error_page 404 resources/not_found.html;
+    error_page 500 resources/internal_server_error.html;
+
+    location /upload {
+        allow_methods POST;
+        upload_dir website/media/;
+        client_max_body_size 5;
+    }
+
+    location /files {
+        allow_methods GET DELETE;
+        root website/media/;
+        auto_index on;
+    }
+
+    location /private {
+        return 301 /;
+    }
+
+    location /cgi {
+        allow_methods GET POST;
+        cgi .pl .py;
+        cgi_path website/api/;
+        auto_index off;
+    }
+}
+
 
